--- a/gossip/css/style.css
+++ b/gossip/css/style.css
@@ -37,7 +37,7 @@ body {
 
 .backgrounds {
     color: green;
-  	font: 'Trebuchet MS', sans-serif;
+  	font-family: 'Trebuchet MS', sans-serif;
  	font-size: 1.25em;
 }
 
