--- a/CityFarmer/css/cf_styles.css
+++ b/CityFarmer/css/cf_styles.css
@@ -23,7 +23,7 @@ main, footer {
 }
 
 footer {
-	text-size-adjust: .75em;
+	font-size: .75em;
 	text-align: center;
 	background-color: grey;
 }
@@ -52,7 +52,7 @@ h1 {
 }
 
 h2 {
-	font-family: Brush Script;
+	font-family: sans-serif;
 	font-weight: normal;
 	font-style: italic;
 }
