--- a/CityFarmer/css/cf_styles.css
+++ b/CityFarmer/css/cf_styles.css
@@ -21,14 +21,12 @@ body {
 	margin: 3%;
 }
 
-main, footer { 
-	clear: both;
-}
-
-footer {
+footer{
 	font-size: .75em;
 	text-align: center;
-	background-color: grey;
+	background-color: rgb(118, 47, 0);
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 main {
@@ -53,4 +51,8 @@ h2 {
 	font-family: sans-serif;
 	font-weight: normal;
 	font-style: italic;
+}
+
+main, footer { 
+	clear: both;
 }
